<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateItem">

    <EditText
        android:id="@+id/station_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:maxLength="30"
        android:minHeight="48dp"
        android:hint="@string/station_name"/>

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:inputType="date"
        android:minHeight="48dp"
        android:hint="@string/Date"/>

    <EditText
        android:id="@+id/fuel_type_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:maxLength="10"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/fuel_type"/>

    <EditText
        android:id="@+id/amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/amount"/>

    <EditText
        android:id="@+id/liter_price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="@string/per_liter_price"/>


    <Button
        android:id="@+id/save_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="update"
        android:text="Update" />

    <Button
        android:id="@+id/cancel_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="cancel"
        android:text="Cancel Update" />

</LinearLayout>